# reg_model_to_hw

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.py
include/: dense.h  import.h  parser.h
model/: model.json  model.py
notebook/: house_prices_exploration.ipynb
src/: dense.cpp  import.cpp  main.cpp  parser.cpp
test/: test.py
